# rusty-bird

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  testing.yml
src/: cli.yml  main.rs
src/game/: mod.rs  pipe.rs  player.rs
src/server/: mod.rs  packet.rs
test-client/: main.py
