[package]
name = "rusty-bird"
version = "0.0.1"
authors = ["Marius Wilms <info@mariuswilms.dev>"]
edition = "2018"
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/mawilms/rusty-bird"
description = """
Rusty bird is a simple flappy bird implementation
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "^0"
glam = { version = "^0", features = ["mint"]}
mint = "^0"
rand = "^0"